Make [contribute]/[my contribution] in menu dynamic

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -18,7 +18,8 @@ gauge:
 
 menu:
     index:
-        label: Contribute!
+        contribute:      Contribute!
+        my_contribution: My contribution
     contributions:
         label:  Contributors
         people: People
