Add count badge in menu

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -17,6 +17,8 @@ gauge:
         top: 😍
 
 menu:
+    count_badge:
+        title: "%count% contributions"
     index:
         contribute:      Contribute!
         my_contribution: My contribution
