--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -19,6 +19,8 @@ gauge:
         top: 😍
 
 menu:
+    count_badge:
+        title: "%count% contributions"
     index:
         contribute:      Participer !
         my_contribution: Ma contribution
