--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
@@ -225,6 +225,7 @@ public_contribution:
 
 footer:
     github: Repositorio en GitHub
+    powered_by:   Powered by
     by_community: Hecho por la comunidad de PHP con <span class="fa fa-heart"></span>
 
 twitter_card:
