--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
@@ -215,7 +215,7 @@ about:
             con su increible trabajo con la
             <a href="https://anvaka.github.io/pm/#/galaxy/composer?cx=7031&cy=-1&cz=2428&lx=-0.0759&ly=0.5682&lz=0.0225&lw=0.8191&ml=150&s=1.75&l=1&v=2015-07-20T04-26-49Z"
             class="differ">Visualización de Galaxias de Código</a>.
-        fanzutti:  Ejemplos con la ayuda de <a href="http://www.florafanzutti.com" class="differ">Flora Fanzutti</a>.
+        fanzutti:  The HaPHPy elePHPant was handcrafted by V. Fanzutti.
 
 # Contribution page
 public_contribution:
