--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -224,7 +224,7 @@ about:
             et son projet
             <a href="https://anvaka.github.io/pm/#/galaxy/composer?cx=7031&cy=-1&cz=2428&lx=-0.0759&ly=0.5682&lz=0.0225&lw=0.8191&ml=150&s=1.75&l=1&v=2015-07-20T04-26-49Z"
             class="differ">Code Galaxies Vizualization</a>.
-        fanzutti:  Exemples de contributions avec le concours technique de <a href="http://www.florafanzutti.com" class="differ">Flora Fanzutti</a>.
+        fanzutti:  HaPHPy éléPHPant fabriqué avec soin par V. Fanzutti.
 
 # Contribution page
 public_contribution:
